[metadata]
name = kpet
description = "KPET - Kernel Patch-Evaluated Testing"
long_description = file: README.md
version = 3
author = Red Hat, Inc.
license = GPLv2+
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GPLv2+
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
# Automatically find all files beneath the kpet directory and include them.
packages = find:
# Parse the MANIFEST.in file and include those files, too.
include_package_data = True
test_suite = tests
install_requires = requests
                   Jinja2
                   PyYAML
                   lxml
tests_require = mock
python_requires = '>=3'
setup_requires = flake8

[options.extras_require]
dev = flake8
      pycodestyle
      pylint
      coverage
      coveralls
      tox

[options.entry_points]
# Set up an executable 'kpet' that calls the main() function in
# skt/__init__.py.
console_scripts =
    kpet = kpet:main

[options.packages.find]
# Don't include the /tests directory when we search for python files.
exclude =
    tests
